# Projet_3eme_annee

./: API_Generated_Photos.py  CMakeLists.txt  Cahier des charges P2.txt  Présentation_PA.txt
Datasets/API_Generated_Photos/: API_Generated_Photos.py  Test.py
Datasets/API_Generated_Photos_Animal/: API_Generated_Photos_Animal.py  scriptCat.py  scriptDog.py  scriptElephant.py
Datasets/API_Generated_Photos_Animal/imagesChien/: 4a678939-b79c-4f20-99b3-3d0a4ffb0716.webm  5f094a88-0123-4247-9e2d-18c4465e7378.webm  6d0f3174-9d9d-43e6-80cd-46632d154228.webm  71c33af4-4d09-4836-b996-816f95c10667.webm  72ed6030-63d1-421b-9091-7ce2c5deb2f5.webm  7efe359c-bb03-4d69-abb9-8a5b529d8237.jfif  AchingAmbitiousBonobo.webm  b0c4a962-ac5f-46d9-b05f-ed13f586bc38.webm  edc1f880-bbf4-43f2-ade7-84cfe3c6d13e.webm  (+2 more)
Datasets/web_scraping_dataset/: app.py
Library C++/: MLP.cpp  MLP.h  SVM.cpp  SVM.h  library_mlp.cpp  main 2.cpp  main 3.cpp  main.cpp  tools_mamadou.cpp  tools_mamadou.h  utilis_mourad.cpp  utilis_mourad.h  utils_ariel.cpp  utils_ariel.h
Library C++/Library_MLP/: CMakeLists.txt  library.cpp
Library C++/My_Lib_CPP/: CMakeLists.txt  TEST_MODEL_WEIGHT.csv  main.cpp
Python/: Cas_Test_PMC.ipynb  Cas_tests_MLP.py  Implem de la classification par le prof.py  Interop_MLP.py  Model_Sklearn.py  Untitled.ipynb  app.py
Python/MODEL SKL/: saved_model.pkl
Python/MODEL_KERAS/: keras_metadata.pb  saved_model.pb
Python/interop/: main.py
Rapport/: Presentation.pptx  Rapport.docx
web_scraping_dataset/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
(+33 files in other folders)
